changed graph sizes and line colors

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -357,40 +357,40 @@
     "\n",
     "\n",
     "# Create our 6 plots (3 singles, 3 coincidences)\n",
-    "singleCountsGPlot = figure(plot_height=250, plot_width=750, title=\"Single Counts Gate\",\n",
+    "singleCountsGPlot = figure(plot_height=260, plot_width=1000, title=\"Single Counts Gate\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = GHover\n",
     "                          )\n",
     "\n",
-    "singleCountsTPlot = figure(plot_height=250, plot_width=750, title=\"Single Counts Transmitted\",\n",
+    "singleCountsTPlot = figure(plot_height=260, plot_width=1000, title=\"Single Counts Transmitted\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = THover\n",
     "                          )\n",
     "\n",
-    "singleCountsRPlot = figure(plot_height=250, plot_width=750, title=\"Single Counts Reflected\",\n",
+    "singleCountsRPlot = figure(plot_height=260, plot_width=1000, title=\"Single Counts Reflected\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = RHover\n",
     "                          )\n",
     "\n",
-    "coincidenceCountsGTPlot = figure(plot_height=250, plot_width=750, \n",
+    "coincidenceCountsGTPlot = figure(plot_height=260, plot_width=1000, \n",
     "                                 title=\"Coincidence Counts Gate and Transmitted\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = GTHover\n",
     "                                )\n",
     "\n",
-    "coincidenceCountsGRPlot = figure(plot_height=250, plot_width=750, \n",
+    "coincidenceCountsGRPlot = figure(plot_height=260, plot_width=1000, \n",
     "                                 title=\"Coincidence Counts Gate and Reflected\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = GRHover\n",
     "                                )\n",
     "\n",
-    "coincidenceCountsGTRPlot = figure(plot_height=250, plot_width=750, \n",
+    "coincidenceCountsGTRPlot = figure(plot_height=260, plot_width=1000, \n",
     "                                 title=\"Three-fold Coincidence Counts\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = GTRHover\n",
     "                                 )\n",
     "\n",
     "# Hover tools for plots with multiple lines are added later \n",
-    "ratioPlot = figure(plot_height=250, plot_width=750, \n",
+    "ratioPlot = figure(plot_height=380, plot_width=1000, \n",
     "                                 title=\"Coincidences to Single Counts Ratio\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\"\n",
     "                                 ) \n",
     "\n",
-    "g2Plot = figure(plot_height=250, plot_width=750, \n",
+    "g2Plot = figure(plot_height=380, plot_width=1000, \n",
     "                                 title=\"g2\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = g2Hover\n",
     "                                 )\n",
@@ -456,16 +456,19 @@
     "\n",
     "\n",
     "# Make each point of each plot a circle\n",
-    "singleCountsGPlot.circle(x = 'timeList', y = 'singleCountsG', source = source, line_width=6, line_alpha=0.6)\n",
-    "singleCountsTPlot.circle(x = 'timeList', y = 'singleCountsT', source = source, line_width=6, line_alpha=0.6)\n",
-    "singleCountsRPlot.circle(x = 'timeList', y = 'singleCountsR', source = source, line_width=6, line_alpha=0.6)\n",
+    "singleCountsGPlot.circle(x = 'timeList', y = 'singleCountsG', source = source, line_width=6, line_alpha=0.6,\n",
+    "                        line_color = 'red')\n",
+    "singleCountsTPlot.circle(x = 'timeList', y = 'singleCountsT', source = source, line_width=6, line_alpha=0.6,\n",
+    "                        line_color = 'green')\n",
+    "singleCountsRPlot.circle(x = 'timeList', y = 'singleCountsR', source = source, line_width=6, line_alpha=0.6,\n",
+    "                        line_color = 'blue')\n",
     "\n",
     "coincidenceCountsGTPlot.circle(x = 'timeList', y = 'coincidenceCountsGT', source = source, \n",
-    "                               line_width=6, line_alpha=0.6, line_color = 'orange')\n",
+    "                               line_width=6, line_alpha=0.6, line_color = 'red')\n",
     "coincidenceCountsGRPlot.circle(x = 'timeList', y = 'coincidenceCountsGR', source = source, \n",
-    "                               line_width=6, line_alpha=0.6, line_color = 'orange')\n",
+    "                               line_width=6, line_alpha=0.6, line_color = 'green')\n",
     "coincidenceCountsGTRPlot.circle(x = 'timeList', y = 'coincidenceCountsGTR', source = source, \n",
-    "                               line_width=6, line_alpha=0.6, line_color = 'orange')\n",
+    "                               line_width=6, line_alpha=0.6, line_color = 'blue')\n",
     "\n",
     "\n",
     "# Create scatter plots for the ratio plot and add their associated hover tools\n",
@@ -486,20 +489,23 @@
     "\n",
     "\n",
     "g2Plot.circle(x = 'timeList', y = 'g2', source = source, \n",
-    "                               line_width=6, line_alpha=0.6, line_color = 'orange')\n",
+    "                               line_width=6, line_alpha=0.6, line_color = 'indigo')\n",
     "\n",
     "\n",
     "# Connect the points of each plot with a line\n",
-    "singleCountsGPlot.line(x = 'timeList', y = 'singleCountsG', source = source, line_width=3, line_alpha=0.6)\n",
-    "singleCountsTPlot.line(x = 'timeList', y = 'singleCountsT', source = source, line_width=3, line_alpha=0.6)\n",
-    "singleCountsRPlot.line(x = 'timeList', y = 'singleCountsR', source = source, line_width=3, line_alpha=0.6)\n",
+    "singleCountsGPlot.line(x = 'timeList', y = 'singleCountsG', source = source, line_width=3, line_alpha=0.6,\n",
+    "                        line_color = 'red')\n",
+    "singleCountsTPlot.line(x = 'timeList', y = 'singleCountsT', source = source, line_width=3, line_alpha=0.6,\n",
+    "                        line_color = 'green')\n",
+    "singleCountsRPlot.line(x = 'timeList', y = 'singleCountsR', source = source, line_width=3, line_alpha=0.6,\n",
+    "                        line_color = 'blue')\n",
     "\n",
     "coincidenceCountsGTPlot.line(x = 'timeList', y = 'coincidenceCountsGT', source = source, \n",
-    "                               line_width=3, line_alpha=0.6, line_color = 'orange')\n",
+    "                               line_width=3, line_alpha=0.6, line_color = 'red')\n",
     "coincidenceCountsGRPlot.line(x = 'timeList', y = 'coincidenceCountsGR', source = source, \n",
-    "                               line_width=3, line_alpha=0.6, line_color = 'orange')\n",
+    "                               line_width=3, line_alpha=0.6, line_color = 'green')\n",
     "coincidenceCountsGTRPlot.line(x = 'timeList', y = 'coincidenceCountsGTR', source = source, \n",
-    "                               line_width=3, line_alpha=0.6, line_color = 'orange')\n",
+    "                               line_width=3, line_alpha=0.6, line_color = 'blue')\n",
     "\n",
     "ratioPlot.line(x = 'timeList', y = 'ratioCountsGT', source = source, \n",
     "                               line_width=3, line_alpha=0.6, line_color = 'red', legend_label=\"GT\")\n",
@@ -512,7 +518,7 @@
     "ratioPlot.legend.location = \"top_left\"\n",
     "\n",
     "g2Plot.line(x = 'timeList', y = 'g2', source = source, \n",
-    "                               line_width=3, line_alpha=0.6, line_color = 'orange')\n",
+    "                               line_width=3, line_alpha=0.6, line_color = 'indigo')\n",
     "\n",
     "\n",
     "\n",
@@ -530,16 +536,17 @@
     "g2Plot.yaxis.axis_label = \"g2\"\n",
     "\n",
     "\n",
-    "# Set x-axis labels for graphs\n",
-    "singleCountsGPlot.xaxis.axis_label = \"Time (s)\"\n",
-    "singleCountsTPlot.xaxis.axis_label = \"Time (s)\"\n",
+    "# Set x-axis labels for bottom-most graphs\n",
+    "\n",
+    "#singleCountsGPlot.xaxis.axis_label = \"Time (s)\"\n",
+    "#singleCountsTPlot.xaxis.axis_label = \"Time (s)\"\n",
     "singleCountsRPlot.xaxis.axis_label = \"Time (s)\"\n",
     "\n",
-    "coincidenceCountsGTPlot.xaxis.axis_label = \"Time (s)\"\n",
-    "coincidenceCountsGRPlot.xaxis.axis_label = \"Time (s)\"\n",
+    "#coincidenceCountsGTPlot.xaxis.axis_label = \"Time (s)\"\n",
+    "#coincidenceCountsGRPlot.xaxis.axis_label = \"Time (s)\"\n",
     "coincidenceCountsGTRPlot.xaxis.axis_label = \"Time (s)\"\n",
     "\n",
-    "ratioPlot.xaxis.axis_label = \"Time (s)\"\n",
+    "#ratioPlot.xaxis.axis_label = \"Time (s)\"\n",
     "\n",
     "g2Plot.xaxis.axis_label = \"Time (s)\"\n",
     "\n",
