fixed rescaling bug

--- a/CoincidenceCountingInterface.ipynb
+++ b/CoincidenceCountingInterface.ipynb
@@ -561,20 +561,20 @@
     "        # shift every element of the list back one index\n",
     "        # this leaves the sixth spot open for the next point to be added next time around\n",
     "        # having the most recent point repeated in both index [4] and index [5] will not change max calculations\n",
-    "        for i in np.arange(4):\n",
-    "            last5A[i+1] = last5A[i]\n",
+    "        for i in np.arange(5):\n",
+    "            last5A[i] = last5A[i+1]\n",
     "            \n",
     "        last5B[5] = lastB\n",
-    "        for i in np.arange(4):\n",
-    "            last5B[i+1] = last5B[i]\n",
+    "        for i in np.arange(5):\n",
+    "            last5B[i] = last5B[i+1]\n",
     "            \n",
     "        last5AB[5] = lastAB\n",
-    "        for i in np.arange(4):\n",
-    "            last5AB[i+1] = last5AB[i]\n",
+    "        for i in np.arange(5):\n",
+    "            last5AB[i] = last5AB[i+1]\n",
     "            \n",
     "        last5Ratio[5] = lastRatio\n",
-    "        for i in np.arange(4):\n",
-    "            last5Ratio[i+1] = last5Ratio[i]\n",
+    "        for i in np.arange(5):\n",
+    "            last5Ratio[i] = last5Ratio[i+1]\n",
     "        \n",
     "        \n",
     "        \n",
