fixed rescaling bug

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -817,45 +817,45 @@
     "        # this leaves the sixth spot open for the next point to be added next time around\n",
     "        # having the most recent point repeated in both index [4] and index [5] will not \n",
     "        # change max calculations\n",
-    "        for i in np.arange(4):\n",
-    "            last5G[i+1] = last5G[i]\n",
+    "        for i in np.arange(5):\n",
+    "            last5G[i] = last5G[i+1]\n",
     "            \n",
     "        last5T[5] = lastT\n",
-    "        for i in np.arange(4):\n",
-    "            last5T[i+1] = last5T[i]\n",
+    "        for i in np.arange(5):\n",
+    "            last5T[i] = last5T[i+1]\n",
     "            \n",
     "        last5R[5] = lastR\n",
-    "        for i in np.arange(4):\n",
-    "            last5R[i+1] = last5R[i]\n",
+    "        for i in np.arange(5):\n",
+    "            last5R[i] = last5R[i+1]\n",
     "            \n",
     "        last5GT[5] = lastGT\n",
-    "        for i in np.arange(4):\n",
-    "            last5GT[i+1] = last5GT[i]\n",
+    "        for i in np.arange(5):\n",
+    "            last5GT[i] = last5GT[i+1]\n",
     "            \n",
     "        last5GR[5] = lastGR\n",
-    "        for i in np.arange(4):\n",
-    "            last5GR[i+1] = last5GR[i]\n",
+    "        for i in np.arange(5):\n",
+    "            last5GR[i] = last5GR[i+1]\n",
     "            \n",
     "        last5GTR[5] = lastGTR\n",
-    "        for i in np.arange(4):\n",
-    "            last5GTR[i+1] = last5GTR[i]\n",
+    "        for i in np.arange(5):\n",
+    "            last5GTR[i] = last5GTR[i+1]\n",
     "           \n",
     "        \n",
     "        last5G2[5] = lastG2\n",
-    "        for i in np.arange(4):\n",
-    "            last5G2[i+1] = last5G2[i]\n",
+    "        for i in np.arange(5):\n",
+    "            last5G2[i] = last5G2[i+1]\n",
     "            \n",
     "            \n",
     "        \n",
     "        last5Ratio[5] = lastRatioGT\n",
     "        last5Ratio[11] = lastRatioGR\n",
     "        last5Ratio[17] = lastRatioGTR\n",
-    "        for i in np.arange(4):\n",
-    "            last5Ratio[i+1] = last5Ratio[i]\n",
-    "        for i in np.arange(4):\n",
-    "            last5Ratio[i+7] = last5Ratio[i]\n",
-    "        for i in np.arange(4):\n",
-    "            last5Ratio[i+13] = last5Ratio[i]\n",
+    "        for i in np.arange(5):\n",
+    "            last5Ratio[i] = last5Ratio[i+1]\n",
+    "        for i in np.arange(5):\n",
+    "            last5Ratio[i+6] = last5Ratio[i+7]\n",
+    "        for i in np.arange(5):\n",
+    "            last5Ratio[i+12] = last5Ratio[i+13]\n",
     "        \n",
     "        \n",
     "    \n",
