--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -558,9 +558,21 @@
     "#coincidenceCountsGRPlot.xaxis.axis_label = \"Time (s)\"\n",
     "coincidenceCountsGTRPlot.xaxis.axis_label = \"Time (s)\"\n",
     "\n",
+    "\n",
     "#ratioPlot.xaxis.axis_label = \"Time (s)\"\n",
     "\n",
     "g2Plot.xaxis.axis_label = \"Time (s)\"\n",
+    "\n",
+    "\n",
+    "# set y axis tick label size\n",
+    "singleCountsGPlot.yaxis.major_label_text_font_size = \"18pt\"\n",
+    "singleCountsTPlot.yaxis.major_label_text_font_size = \"18pt\"\n",
+    "singleCountsRPlot.yaxis.major_label_text_font_size = \"18pt\"\n",
+    "coincidenceCountsGTPlot.yaxis.major_label_text_font_size = \"18pt\"\n",
+    "coincidenceCountsGRPlot.yaxis.major_label_text_font_size = \"18pt\"\n",
+    "coincidenceCountsGTRPlot.yaxis.major_label_text_font_size = \"18pt\"\n",
+    "ratioPlot.yaxis.major_label_text_font_size = \"18pt\"\n",
+    "g2Plot.yaxis.major_label_text_font_size = \"18pt\"\n",
     "\n",
     "\n",
     "\n",
@@ -572,6 +584,10 @@
     "\n",
     "# Set up the save datda button, to export the data to a csv file\n",
     "saveDataButton = Button(label=\"Save Data\", width = 200)\n",
+    "\n",
+    "# Set up the autoscaling toggle button\n",
+    "autoscalingToggle = Toggle(label=\"Autoscaling ON\", active = True, width = 200)\n",
+    "autoscalingActive = autoscalingToggle.active # keep track of the mode\n",
     "\n",
     "# Make a label reminding counter settings\n",
     "counterSettings = PreText(text = ''' \n",
@@ -673,6 +689,8 @@
     "    \n",
     "    global runningTime\n",
     "    \n",
+    "    global autoscalingActive\n",
+    "    \n",
     "    # add the counting time to our running time\n",
     "    runningTime = runningTime + countingTime\n",
     "    \n",
@@ -761,48 +779,6 @@
     "    global last5G2\n",
     "    \n",
     "    \n",
-    "    # Rescale y-axes as needed:\n",
-    "    \n",
-    "    # check for spikes outside of y_range on all four plots\n",
-    "    # if new point y value is outside of y_range, then change range\n",
-    "    \n",
-    "    if currentG > yEndG:   \n",
-    "        # reset the y-axis scaling to show this new high point\n",
-    "        yEndG = currentG*1.5\n",
-    "        # set the rescale count back to 0 so that we need to wait for another 5 points to auto-rescale\n",
-    "        rescaleCountG = 0\n",
-    "        \n",
-    "    if currentT > yEndT:   \n",
-    "        yEndT = currentT*1.5\n",
-    "        rescaleCountT = 0\n",
-    "        \n",
-    "    if currentR > yEndR:   \n",
-    "        yEndR = currentR*1.5\n",
-    "        rescaleCountR = 0\n",
-    "        \n",
-    "    if currentGT > yEndGT:   \n",
-    "        yEndGT = currentGT*1.5\n",
-    "        rescaleCountGT = 0\n",
-    "        \n",
-    "    if currentGR > yEndGR:   \n",
-    "        yEndGR = currentGR*1.5\n",
-    "        rescaleCountGR = 0\n",
-    "        \n",
-    "    if currentGTR > yEndGTR:   \n",
-    "        yEndGTR = currentGTR*1.5\n",
-    "        rescaleCountGTR = 0\n",
-    "        \n",
-    "    # if any ratio goes above y range, use max value to extend y range\n",
-    "    if max([currentRatioGT, currentRatioGR, currentRatioGTR]) > yEndRatio:   \n",
-    "        # reset the y-axis scaling to show this new high point\n",
-    "        yEndRatio = max([currentRatioGT, currentRatioGR, currentRatioGTR])*1.5   \n",
-    "        rescaleCountRatio = 0\n",
-    "    \n",
-    "    if currentG2 > yEndG2:   \n",
-    "        yEndG2 = currentG2*1.5\n",
-    "        rescaleCountG2 = 0\n",
-    "    \n",
-    "    \n",
     "    # update the list of the last 5 data points\n",
     "    \n",
     "    # shift every element of the list back one index\n",
@@ -846,106 +822,151 @@
     "    last5Ratio[4] = currentRatioGT\n",
     "    last5Ratio[9] = currentRatioGR\n",
     "    last5Ratio[14] = currentRatioGTR\n",
-    "    \n",
-    "    \n",
-    "    # find the max values of the last 5 data points\n",
-    "    recentMaxG = max(last5G)\n",
-    "    recentMaxT = max(last5T)\n",
-    "    recentMaxR = max(last5R)\n",
-    "    recentMaxGT = max(last5GT)\n",
-    "    recentMaxGR = max(last5GR)\n",
-    "    recentMaxGTR = max(last5GTR)\n",
-    "    recentMaxRatio = max(last5Ratio)\n",
-    "    recentMaxG2 = max(last5G2)       \n",
-    "        \n",
-    "    \n",
-    "    # if reset y axis count is greater than or equal to 5, we rescale the \n",
-    "    # y axis based on the most recent 5 points\n",
-    "    \n",
-    "    if rescaleCountG >= 5:\n",
-    "        rescaleCountG = 0\n",
-    "        #sourceDataText.text = ' '.join(map(str, max(source.data['singleCountsA'][-5:])))\n",
-    "        # if the recent max value is greater than 0:\n",
-    "        if recentMaxG > 0:\n",
-    "            # reset the y-axis scaling to show recent max plus 0.5 * recent max\n",
-    "            yEndG = recentMaxG*1.5\n",
-    "        # else if recent max is 0:\n",
-    "        else:\n",
-    "            # reset the upper limit to 1000\n",
-    "            yEndG = 1000\n",
-    "            \n",
-    "    if rescaleCountT >= 5: \n",
-    "        rescaleCountT = 0\n",
-    "        if recentMaxT > 0:\n",
-    "            yEndT = recentMaxT*1.5\n",
-    "        else:\n",
-    "            yEndT = 1000\n",
-    "            \n",
-    "    if rescaleCountR >= 5: \n",
-    "        rescaleCountR = 0\n",
-    "        if recentMaxR > 0:\n",
-    "            yEndR = recentMaxR*1.5\n",
-    "        else:\n",
-    "            yEndR = 1000\n",
-    "   \n",
-    "    if rescaleCountGT >= 5:\n",
-    "        rescaleCountGT = 0\n",
-    "        if recentMaxGT > 0:\n",
-    "            yEndGT = recentMaxGT*1.5\n",
-    "        else:\n",
-    "            yEndGT = 1000\n",
-    "            \n",
-    "    if rescaleCountGR >= 5: \n",
-    "        rescaleCountGR = 0\n",
-    "        if recentMaxGR > 0:\n",
-    "            yEndGR = recentMaxGR*1.5\n",
-    "        else:\n",
-    "            yEndGR = 1000\n",
-    "    \n",
-    "    if rescaleCountGTR >= 5:\n",
-    "        rescaleCountGTR = 0\n",
-    "        if recentMaxGTR > 0:\n",
-    "            yEndGTR = recentMaxGTR*1.5\n",
-    "        else:\n",
-    "            yEndGTR = 1000\n",
-    "        \n",
-    "    if rescaleCountRatio >= 5:\n",
-    "        rescaleCountRatio = 0\n",
-    "        if recentMaxRatio > 0:\n",
-    "            yEndRatio = recentMaxRatio*1.5\n",
-    "        else:\n",
-    "            yEndRatio = 0.2\n",
-    "    \n",
-    "    if rescaleCountG2 >= 5:\n",
-    "        rescaleCountG2 = 0\n",
-    "        if recentMaxG2 > 0:\n",
-    "            yEndG2 = recentMaxG2*1.5\n",
-    "        else:\n",
-    "            yEndG2 = 2\n",
-    "    \n",
-    "    \n",
-    "    # update the y axis range\n",
-    "    singleCountsGPlot.y_range.update(start = -yEndG*0.1, end = yEndG)\n",
-    "    singleCountsTPlot.y_range.update(start = -yEndT*0.1, end = yEndT)\n",
-    "    singleCountsRPlot.y_range.update(start = -yEndR*0.1, end = yEndR)\n",
-    "    coincidenceCountsGTPlot.y_range.update(start = -yEndGT*0.1, end = yEndGT)\n",
-    "    coincidenceCountsGRPlot.y_range.update(start = -yEndGR*0.1, end = yEndGR)\n",
-    "    coincidenceCountsGTRPlot.y_range.update(start = -yEndGTR*0.1, end = yEndGTR)\n",
-    "    ratioPlot.y_range.update(start = -yEndRatio*0.1, end = yEndRatio)\n",
-    "    g2Plot.y_range.update(start = -yEndG2*0.1, end = yEndG2)\n",
     "\n",
-    "            \n",
     "    \n",
-    "    # add 1 to reset y-axis counter\n",
-    "    rescaleCountG = rescaleCountG + 1\n",
-    "    rescaleCountT = rescaleCountT + 1\n",
-    "    rescaleCountR = rescaleCountR + 1\n",
-    "    rescaleCountGT = rescaleCountGT + 1\n",
-    "    rescaleCountGR = rescaleCountGR + 1\n",
-    "    rescaleCountGTR = rescaleCountGTR + 1\n",
-    "    rescaleCountRatio = rescaleCountRatio + 1\n",
-    "    rescaleCountG2 = rescaleCountG2 + 1\n",
-    "    \n",
+    "    # Rescale y-axes only when the autoscaling is on\n",
+    "    if autoscalingActive:\n",
+    "        \n",
+    "        # check for spikes outside of y_range on all four plots\n",
+    "        # if new point y value is outside of y_range, then change range\n",
+    "\n",
+    "        if currentG > yEndG:   \n",
+    "            # reset the y-axis scaling to show this new high point\n",
+    "            yEndG = currentG*1.5\n",
+    "            # set the rescale count back to 0 so that we need to wait for another 5 points to auto-rescale\n",
+    "            rescaleCountG = 0\n",
+    "\n",
+    "        if currentT > yEndT:   \n",
+    "            yEndT = currentT*1.5\n",
+    "            rescaleCountT = 0\n",
+    "\n",
+    "        if currentR > yEndR:   \n",
+    "            yEndR = currentR*1.5\n",
+    "            rescaleCountR = 0\n",
+    "\n",
+    "        if currentGT > yEndGT:   \n",
+    "            yEndGT = currentGT*1.5\n",
+    "            rescaleCountGT = 0\n",
+    "\n",
+    "        if currentGR > yEndGR:   \n",
+    "            yEndGR = currentGR*1.5\n",
+    "            rescaleCountGR = 0\n",
+    "\n",
+    "        if currentGTR > yEndGTR:   \n",
+    "            yEndGTR = currentGTR*1.5\n",
+    "            rescaleCountGTR = 0\n",
+    "\n",
+    "        # if any ratio goes above y range, use max value to extend y range\n",
+    "        if max([currentRatioGT, currentRatioGR, currentRatioGTR]) > yEndRatio:   \n",
+    "            # reset the y-axis scaling to show this new high point\n",
+    "            yEndRatio = max([currentRatioGT, currentRatioGR, currentRatioGTR])*1.5   \n",
+    "            rescaleCountRatio = 0\n",
+    "\n",
+    "        if currentG2 > yEndG2:   \n",
+    "            yEndG2 = currentG2*1.5\n",
+    "            rescaleCountG2 = 0\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        # find the max values of the last 5 data points\n",
+    "        recentMaxG = max(last5G)\n",
+    "        recentMaxT = max(last5T)\n",
+    "        recentMaxR = max(last5R)\n",
+    "        recentMaxGT = max(last5GT)\n",
+    "        recentMaxGR = max(last5GR)\n",
+    "        recentMaxGTR = max(last5GTR)\n",
+    "        recentMaxRatio = max(last5Ratio)\n",
+    "        recentMaxG2 = max(last5G2)       \n",
+    "\n",
+    "\n",
+    "        # if reset y axis count is greater than or equal to 5, we rescale the \n",
+    "        # y axis based on the most recent 5 points\n",
+    "\n",
+    "        if rescaleCountG >= 5:\n",
+    "            rescaleCountG = 0\n",
+    "            #sourceDataText.text = ' '.join(map(str, max(source.data['singleCountsA'][-5:])))\n",
+    "            # if the recent max value is greater than 0:\n",
+    "            if recentMaxG > 0:\n",
+    "                # reset the y-axis scaling to show recent max plus 0.5 * recent max\n",
+    "                yEndG = recentMaxG*1.5\n",
+    "            # else if recent max is 0:\n",
+    "            else:\n",
+    "                # reset the upper limit to 1000\n",
+    "                yEndG = 1000\n",
+    "\n",
+    "        if rescaleCountT >= 5: \n",
+    "            rescaleCountT = 0\n",
+    "            if recentMaxT > 0:\n",
+    "                yEndT = recentMaxT*1.5\n",
+    "            else:\n",
+    "                yEndT = 1000\n",
+    "\n",
+    "        if rescaleCountR >= 5: \n",
+    "            rescaleCountR = 0\n",
+    "            if recentMaxR > 0:\n",
+    "                yEndR = recentMaxR*1.5\n",
+    "            else:\n",
+    "                yEndR = 1000\n",
+    "\n",
+    "        if rescaleCountGT >= 5:\n",
+    "            rescaleCountGT = 0\n",
+    "            if recentMaxGT > 0:\n",
+    "                yEndGT = recentMaxGT*1.5\n",
+    "            else:\n",
+    "                yEndGT = 1000\n",
+    "\n",
+    "        if rescaleCountGR >= 5: \n",
+    "            rescaleCountGR = 0\n",
+    "            if recentMaxGR > 0:\n",
+    "                yEndGR = recentMaxGR*1.5\n",
+    "            else:\n",
+    "                yEndGR = 1000\n",
+    "\n",
+    "        if rescaleCountGTR >= 5:\n",
+    "            rescaleCountGTR = 0\n",
+    "            if recentMaxGTR > 0:\n",
+    "                yEndGTR = recentMaxGTR*1.5\n",
+    "            else:\n",
+    "                yEndGTR = 1000\n",
+    "\n",
+    "        if rescaleCountRatio >= 5:\n",
+    "            rescaleCountRatio = 0\n",
+    "            if recentMaxRatio > 0:\n",
+    "                yEndRatio = recentMaxRatio*1.5\n",
+    "            else:\n",
+    "                yEndRatio = 0.2\n",
+    "\n",
+    "        if rescaleCountG2 >= 5:\n",
+    "            rescaleCountG2 = 0\n",
+    "            if recentMaxG2 > 0:\n",
+    "                yEndG2 = recentMaxG2*1.5\n",
+    "            else:\n",
+    "                yEndG2 = 2\n",
+    "\n",
+    "\n",
+    "        # update the y axis range\n",
+    "        singleCountsGPlot.y_range.update(start = -yEndG*0.1, end = yEndG)\n",
+    "        singleCountsTPlot.y_range.update(start = -yEndT*0.1, end = yEndT)\n",
+    "        singleCountsRPlot.y_range.update(start = -yEndR*0.1, end = yEndR)\n",
+    "        coincidenceCountsGTPlot.y_range.update(start = -yEndGT*0.1, end = yEndGT)\n",
+    "        coincidenceCountsGRPlot.y_range.update(start = -yEndGR*0.1, end = yEndGR)\n",
+    "        coincidenceCountsGTRPlot.y_range.update(start = -yEndGTR*0.1, end = yEndGTR)\n",
+    "        ratioPlot.y_range.update(start = -yEndRatio*0.1, end = yEndRatio)\n",
+    "        g2Plot.y_range.update(start = -yEndG2*0.1, end = yEndG2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "        # add 1 to reset y-axis counter\n",
+    "        rescaleCountG = rescaleCountG + 1\n",
+    "        rescaleCountT = rescaleCountT + 1\n",
+    "        rescaleCountR = rescaleCountR + 1\n",
+    "        rescaleCountGT = rescaleCountGT + 1\n",
+    "        rescaleCountGR = rescaleCountGR + 1\n",
+    "        rescaleCountGTR = rescaleCountGTR + 1\n",
+    "        rescaleCountRatio = rescaleCountRatio + 1\n",
+    "        rescaleCountG2 = rescaleCountG2 + 1\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -1099,9 +1120,18 @@
     "    ratioPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
     "    \n",
     "    \n",
-    "\n",
-    "\n",
+    "def change_autoscaling_mode(new):\n",
     "    \n",
+    "    global autoscalingActive\n",
+    "    \n",
+    "    # update the value of autoscalingActive\n",
+    "    autoscalingActive = autoscalingToggle.active\n",
+    "    \n",
+    "    # update the label on the toggle button\n",
+    "    if autoscalingActive:\n",
+    "        autoscalingToggle.label = \"Autoscaling ON\"\n",
+    "    else:\n",
+    "        autoscalingToggle.label = \"Autoscaling OFF\"\n",
     "\n",
     "    \n",
     "# When the START/STOP button is clicked, call the change_periodic_callback function\n",
@@ -1120,7 +1150,8 @@
     "# When number of points is changed, change follow interval\n",
     "numberPointsSlider.on_change('value', change_number_points)\n",
     "\n",
-    "\n",
+    "# When the autoscaling toggle button is clicked, call the change_autoscaling_mode function\n",
+    "autoscalingToggle.on_click(change_autoscaling_mode)\n",
     "\n",
     "\n",
     "\n",
@@ -1131,7 +1162,8 @@
     "                          countingTimeSlider,\n",
     "                          numberPointsSlider,\n",
     "                          resetGraphButton,\n",
-    "                          saveDataButton\n",
+    "                          saveDataButton,\n",
+    "                          autoscalingToggle\n",
     "                         )\n",
     "\n",
     "\n",
