initialized counter settings

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -282,6 +282,14 @@
     "# call the send_info function when the button is clicked.\n",
     "set_button.on_click(send_info)\n",
     "\n",
+    "# Initialize the counter setting to those desired for G2 Alignment\n",
+    "\n",
+    "s.write('S01000\\n'.encode())\n",
+    "s.write('S10100\\n'.encode())\n",
+    "s.write('S20010\\n'.encode())\n",
+    "s.write('S31100\\n'.encode())\n",
+    "s.write('S41010\\n'.encode())\n",
+    "s.write('S51110\\n'.encode())\n",
     "\n",
     "\n",
     "# This portion of the code is for the Three Graphs\n",
@@ -1245,7 +1253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
