added lines for adjusted g2 and hover tool shows calculated accidental

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -329,7 +329,9 @@
     "    ratioCountsGT=[],\n",
     "    ratioCountsGR=[],\n",
     "    ratioCountsGTR=[],\n",
-    "    g2=[]\n",
+    "    g2=[],\n",
+    "    accidentalg2=[],\n",
+    "    adjustedg2=[]\n",
     "    ))\n",
     "\n",
     "\n",
@@ -367,11 +369,6 @@
     "    (\"Time\", \"@timeList\"),\n",
     "    (\"Total Counts\", \"@coincidenceCountsGTR\"),\n",
     "    (\"Accidental Counts\", \"@accidentalCoincidencesGTR\")\n",
-    "]\n",
-    "\n",
-    "g2Hover = [\n",
-    "    (\"Time\", \"@timeList\"),\n",
-    "    (\"g2 value\", \"@g2\")\n",
     "]\n",
     "\n",
     "\n",
@@ -412,8 +409,10 @@
     "\n",
     "g2Plot = figure(plot_height=380, plot_width=1000, \n",
     "                                 title=\"g2\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = g2Hover\n",
+    "              tools=\"crosshair,pan,reset,save,wheel_zoom\"\n",
     "                                 )\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -508,9 +507,16 @@
     "                                (\"Coincidence\", \"GTR\"), (\"Ratio\",\"@ratioCountsGTR\")], mode='mouse'))\n",
     "\n",
     "\n",
-    "g2Plot.circle(x = 'timeList', y = 'g2', source = source, \n",
-    "                               line_width=6, line_alpha=0.6, line_color = 'indigo')\n",
+    "g2Points = g2Plot.circle(x = 'timeList', y = 'g2', source = source, \n",
+    "                               line_width=6, line_alpha=0.6, line_color = 'purple', legend_label=\"G2\")\n",
+    "g2Plot.add_tools(HoverTool(renderers=[g2Points], tooltips=[(\"Time\",\"@timeList\"),\n",
+    "                        (\"g2\",\"@g2\"), (\"g2 (Accidental)\",\"@accidentalg2\")], mode='mouse'))\n",
     "\n",
+    "adjustedg2Points = g2Plot.circle(x = 'timeList', y = 'adjustedg2', source = source, \n",
+    "                               line_width=6, line_alpha=0.6, line_color = 'indigo', \n",
+    "                               legend_label=\"G2 (Adjusted)\")\n",
+    "g2Plot.add_tools(HoverTool(renderers=[adjustedg2Points], tooltips=[(\"Time\",\"@timeList\"), \n",
+    "                        (\"g2 (Adjusted)\",\"@adjustedg2\")], mode='mouse'))\n",
     "\n",
     "# Connect the points of each plot with a line\n",
     "singleCountsGPlot.line(x = 'timeList', y = 'singleCountsG', source = source, line_width=3, line_alpha=0.6,\n",
@@ -534,13 +540,20 @@
     "ratioPlot.line(x = 'timeList', y = 'ratioCountsGTR', source = source, \n",
     "                               line_width=3, line_alpha=0.6, line_color = 'blue', legend_label=\"GTR\")\n",
     "\n",
-    "# Specify the location of the legend\n",
-    "ratioPlot.legend.location = \"top_left\"\n",
+    "\n",
     "\n",
     "g2Plot.line(x = 'timeList', y = 'g2', source = source, \n",
-    "                               line_width=3, line_alpha=0.6, line_color = 'indigo')\n",
+    "                               line_width=3, line_alpha=0.6, line_color = 'purple', legend_label=\"G2\")\n",
+    "\n",
+    "g2Plot.line(x = 'timeList', y = 'adjustedg2', source = source, \n",
+    "                               line_width=3, line_alpha=0.6, line_color = 'indigo',\n",
+    "                               legend_label=\"G2 (Adjusted)\")\n",
     "\n",
     "\n",
+    "# Specify the location of the legend\n",
+    "ratioPlot.legend.location = \"top_left\"\n",
+    "# Specify the location of the legend\n",
+    "g2Plot.legend.location = \"top_left\"\n",
     "\n",
     "# Set y-axis labels for graphs\n",
     "singleCountsGPlot.yaxis.axis_label = \"Counts\"\n",
@@ -744,6 +757,19 @@
     "    else:\n",
     "        #nan = float('nan')\n",
     "        currentG2 = 0 # need to alert the user that this value is not a number\n",
+    "        \n",
+    "    if currentGT > 0 and currentGR > 0:\n",
+    "        \n",
+    "        a = (currentG*currentR*25*(10**(-9)))/(currentGR*countingTime)\n",
+    "        b = (currentG*currentT*25*(10**(-9)))/(currentGT*countingTime)\n",
+    "        \n",
+    "        currentAccidentalG2 = a + b\n",
+    "        \n",
+    "    else:\n",
+    "        \n",
+    "        currentAccidentalG2 = 0  # need to alert the user that this value is not a number\n",
+    "        \n",
+    "    currentAdjustedG2 = currentG2 - currentAccidentalG2\n",
     "    \n",
     "    # update the data source\n",
     "    new_data = dict(\n",
@@ -760,7 +786,9 @@
     "        ratioCountsGT=[currentRatioGT],\n",
     "        ratioCountsGR=[currentRatioGR],\n",
     "        ratioCountsGTR=[currentRatioGTR],\n",
-    "        g2=[currentG2]\n",
+    "        g2=[currentG2],\n",
+    "        accidentalg2=[currentAccidentalG2],\n",
+    "        adjustedg2 = [currentAdjustedG2]\n",
     "        )\n",
     "    \n",
     "    # Stream the new data to the plots.\n",
