updated g2 scaling (more important for finding minumum later)

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -513,7 +513,7 @@
     "                        (\"g2\",\"@g2\"), (\"g2 (Accidental)\",\"@accidentalg2\")], mode='mouse'))\n",
     "\n",
     "adjustedg2Points = g2Plot.circle(x = 'timeList', y = 'adjustedg2', source = source, \n",
-    "                               line_width=6, line_alpha=0.6, line_color = 'indigo', \n",
+    "                               line_width=6, line_alpha=0.6, line_color = 'orchid', \n",
     "                               legend_label=\"G2 (Adjusted)\")\n",
     "g2Plot.add_tools(HoverTool(renderers=[adjustedg2Points], tooltips=[(\"Time\",\"@timeList\"), \n",
     "                        (\"g2 (Adjusted)\",\"@adjustedg2\")], mode='mouse'))\n",
@@ -546,7 +546,7 @@
     "                               line_width=3, line_alpha=0.6, line_color = 'purple', legend_label=\"G2\")\n",
     "\n",
     "g2Plot.line(x = 'timeList', y = 'adjustedg2', source = source, \n",
-    "                               line_width=3, line_alpha=0.6, line_color = 'indigo',\n",
+    "                               line_width=3, line_alpha=0.6, line_color = 'orchid',\n",
     "                               legend_label=\"G2 (Adjusted)\")\n",
     "\n",
     "\n",
@@ -689,7 +689,7 @@
     "last5GR = np.zeros(5)\n",
     "last5GTR = np.zeros(5)\n",
     "last5Ratio = np.zeros(15)\n",
-    "last5G2 = np.zeros(5)\n",
+    "last5G2 = np.zeros(10)\n",
     "\n",
     "# Define a fuction to call when the current document (curdoc) has periodic callback on\n",
     "# This function appends new data to our plots through the stream data command\n",
@@ -845,7 +845,11 @@
     "   \n",
     "    for i in np.arange(4):\n",
     "        last5G2[i] = last5G2[i+1]\n",
+    "    for i in np.arange(4):\n",
+    "        last5G2[i+5] = last5G2[i+6]\n",
+    "    \n",
     "    last5G2[4] = currentG2\n",
+    "    last5G2[9] = currentAdjustedG2\n",
     "\n",
     "    # the last5Ratio list stores the most recent ratio data. 0-4: GT ratio. 5-9: GR ratio. 10-14: GTR ratio.\n",
     "    for i in np.arange(4):\n",
@@ -897,7 +901,8 @@
     "            # reset the y-axis scaling to show this new high point\n",
     "            yEndRatio = max([currentRatioGT, currentRatioGR, currentRatioGTR])*1.5   \n",
     "            rescaleCountRatio = 0\n",
-    "\n",
+    "        \n",
+    "        # G2 will always be >= to adjusted g2, so no need to include a max function here\n",
     "        if currentG2 > yEndG2:   \n",
     "            yEndG2 = currentG2*1.5\n",
     "            rescaleCountG2 = 0\n",
