Auto scale both upper & lower y limits
Enabled autoscaling the lower y limit. After switching to autoscale off mode, plots with only one line will have their y range automatically set to mean(last5Points) +- 0.2 mean(last5Points). There will be no change to plots with multiple lines.

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -643,20 +643,28 @@
     "rescaleCountG2 = 0\n",
     "\n",
     "# use these to keep track of the end of y_range for all plots\n",
+    "yStartG = -100\n",
     "yEndG = 1000\n",
     "\n",
+    "yStartT = -100\n",
     "yEndT = 1000\n",
     "\n",
+    "yStartR = -100\n",
     "yEndR = 1000\n",
     "\n",
+    "yStartGT = -100\n",
     "yEndGT = 1000\n",
     "\n",
+    "yStartGR = -100\n",
     "yEndGR = 1000\n",
     "\n",
+    "yStartGTR = -100\n",
     "yEndGTR = 1000\n",
     "\n",
+    "yStartRatio = -0.1\n",
     "yEndRatio = 1.01\n",
     "\n",
+    "yStartG2 = -1\n",
     "yEndG2 = 3\n",
     "\n",
     "\n",
@@ -664,21 +672,21 @@
     "# Set y_ranges for all plots\n",
     "# if you do not do this, you will not be able to alter it later\n",
     "\n",
-    "singleCountsGPlot.y_range = Range1d(-100, yEndG)\n",
+    "singleCountsGPlot.y_range = Range1d(yStartG, yEndG)\n",
     "\n",
-    "singleCountsTPlot.y_range = Range1d(-100, yEndT)\n",
+    "singleCountsTPlot.y_range = Range1d(yStartT, yEndT)\n",
     "\n",
-    "singleCountsRPlot.y_range = Range1d(-100, yEndR)\n",
+    "singleCountsRPlot.y_range = Range1d(yStartR, yEndR)\n",
     "\n",
-    "coincidenceCountsGTPlot.y_range = Range1d(-100, yEndGT)\n",
+    "coincidenceCountsGTPlot.y_range = Range1d(yStartGT, yEndGT)\n",
     "\n",
-    "coincidenceCountsGRPlot.y_range = Range1d(-100, yEndGR)\n",
+    "coincidenceCountsGRPlot.y_range = Range1d(yStartGR, yEndGR)\n",
     "\n",
-    "coincidenceCountsGTRPlot.y_range = Range1d(-100, yEndGTR)\n",
+    "coincidenceCountsGTRPlot.y_range = Range1d(yStartGTR, yEndGTR)\n",
     "\n",
-    "ratioPlot.y_range = Range1d(-0.01, yEndRatio)\n",
+    "ratioPlot.y_range = Range1d(yStartRatio, yEndRatio)\n",
     "\n",
-    "g2Plot.y_range = Range1d(-0.1, yEndG2)\n",
+    "g2Plot.y_range = Range1d(yStartG2, yEndG2)\n",
     "\n",
     "\n",
     "# define global lists for last 5 data points\n",
@@ -795,6 +803,15 @@
     "    source.stream(new_data)\n",
     "    \n",
     "    # use global variable\n",
+    "    global yStartG\n",
+    "    global yStartT\n",
+    "    global yStartR\n",
+    "    global yStartGT\n",
+    "    global yStartGR\n",
+    "    global yStartGTR\n",
+    "    global yStartRatio\n",
+    "    global yStartG2\n",
+    "    \n",
     "    global yEndG\n",
     "    global yEndT\n",
     "    global yEndR\n",
@@ -870,44 +887,33 @@
     "        # check for spikes outside of y_range on all four plots\n",
     "        # if new point y value is outside of y_range, then change range\n",
     "\n",
-    "        if currentG > yEndG:   \n",
-    "            # reset the y-axis scaling to show this new high point\n",
-    "            yEndG = currentG*1.5\n",
-    "            # set the rescale count back to 0 so that we need to wait for another 5 points to auto-rescale\n",
-    "            rescaleCountG = 0\n",
+    "        if currentG > yEndG or currentG < yStartG:   \n",
+    "            # set the rescale count to 5 so that the plot will be rescaled immediately to show all \n",
+    "            # last 5 points\n",
+    "            rescaleCountG = 5\n",
     "\n",
-    "        if currentT > yEndT:   \n",
-    "            yEndT = currentT*1.5\n",
-    "            rescaleCountT = 0\n",
+    "        if currentT > yEndT or currentT < yStartT:   \n",
+    "            rescaleCountT = 5\n",
     "\n",
-    "        if currentR > yEndR:   \n",
-    "            yEndR = currentR*1.5\n",
-    "            rescaleCountR = 0\n",
+    "        if currentR > yEndR or currentR < yStartR:   \n",
+    "            rescaleCountR = 5\n",
     "\n",
-    "        if currentGT > yEndGT:   \n",
-    "            yEndGT = currentGT*1.5\n",
-    "            rescaleCountGT = 0\n",
+    "        if currentGT > yEndGT or currentGT < yStartGT:   \n",
+    "            rescaleCountGT = 5\n",
     "\n",
-    "        if currentGR > yEndGR:   \n",
-    "            yEndGR = currentGR*1.5\n",
-    "            rescaleCountGR = 0\n",
+    "        if currentGR > yEndGR or currentGR < yStartGR:   \n",
+    "            rescaleCountGR = 5\n",
     "\n",
-    "        if currentGTR > yEndGTR:   \n",
-    "            yEndGTR = currentGTR*1.5\n",
-    "            rescaleCountGTR = 0\n",
+    "        if currentGTR > yEndGTR or currentGTR < yStartGTR:   \n",
+    "            rescaleCountGTR = 5\n",
     "\n",
-    "        # if any ratio goes above y range, use max value to extend y range\n",
-    "        if max([currentRatioGT, currentRatioGR, currentRatioGTR]) > yEndRatio:   \n",
-    "            # reset the y-axis scaling to show this new high point\n",
-    "            yEndRatio = max([currentRatioGT, currentRatioGR, currentRatioGTR])*1.5   \n",
-    "            rescaleCountRatio = 0\n",
+    "        # if any ratio goes above y range, use max & min value to extend y range\n",
+    "        if max([currentRatioGT, currentRatioGR, currentRatioGTR]) > yEndRatio or min([currentRatioGT, currentRatioGR, currentRatioGTR]) < yStartRatio:  \n",
+    "            rescaleCountRatio = 5\n",
     "        \n",
     "        # G2 will always be >= to adjusted g2, so no need to include a max function here\n",
-    "        if currentG2 > yEndG2:   \n",
-    "            yEndG2 = currentG2*1.5\n",
-    "            rescaleCountG2 = 0\n",
-    "\n",
-    "\n",
+    "        if currentG2 > yEndG2 or currentG2 < yStartG2:   \n",
+    "            rescaleCountG2 = 5\n",
     "\n",
     "\n",
     "        # find the max values of the last 5 data points\n",
@@ -918,7 +924,16 @@
     "        recentMaxGR = max(last5GR)\n",
     "        recentMaxGTR = max(last5GTR)\n",
     "        recentMaxRatio = max(last5Ratio)\n",
-    "        recentMaxG2 = max(last5G2)       \n",
+    "        recentMaxG2 = max(last5G2)\n",
+    "        \n",
+    "        recentMinG = min(last5G)\n",
+    "        recentMinT = min(last5T)\n",
+    "        recentMinR = min(last5R)\n",
+    "        recentMinGT = min(last5GT)\n",
+    "        recentMinGR = min(last5GR)\n",
+    "        recentMinGTR = min(last5GTR)\n",
+    "        recentMinRatio = min(last5Ratio)\n",
+    "        recentMinG2 = min(last5G2) \n",
     "\n",
     "\n",
     "        # if reset y axis count is greater than or equal to 5, we rescale the \n",
@@ -929,72 +944,113 @@
     "            #sourceDataText.text = ' '.join(map(str, max(source.data['singleCountsA'][-5:])))\n",
     "            # if the recent max value is greater than 0:\n",
     "            if recentMaxG > 0:\n",
-    "                # reset the y-axis scaling to show recent max plus 0.5 * recent max\n",
-    "                yEndG = recentMaxG*1.5\n",
-    "            # else if recent max is 0:\n",
+    "                # reset the y-axis scaling to show recent max plus 0.2 * recent max\n",
+    "                yEndG = recentMaxG*1.2\n",
     "            else:\n",
     "                # reset the upper limit to 1000\n",
     "                yEndG = 1000\n",
+    "                \n",
+    "            if recentMinG > 0:\n",
+    "                # reset the y-axis scaling to show recent min minus 0.2 * recent min\n",
+    "                yStartG = recentMinG*0.8\n",
+    "            else:\n",
+    "                # reset the lower limit to -100\n",
+    "                yStartG = -100\n",
     "\n",
     "        if rescaleCountT >= 5: \n",
     "            rescaleCountT = 0\n",
     "            if recentMaxT > 0:\n",
-    "                yEndT = recentMaxT*1.5\n",
+    "                yEndT = recentMaxT*1.2\n",
     "            else:\n",
     "                yEndT = 1000\n",
+    "                \n",
+    "            if recentMinT > 0:\n",
+    "                yStartT = recentMinT*0.8\n",
+    "            else:\n",
+    "                yStartT = -100\n",
     "\n",
     "        if rescaleCountR >= 5: \n",
     "            rescaleCountR = 0\n",
     "            if recentMaxR > 0:\n",
-    "                yEndR = recentMaxR*1.5\n",
+    "                yEndR = recentMaxR*1.2\n",
     "            else:\n",
     "                yEndR = 1000\n",
+    "            \n",
+    "            if recentMinR > 0:\n",
+    "                yStartR = recentMinR*0.8\n",
+    "            else:\n",
+    "                yStartR = -100\n",
     "\n",
     "        if rescaleCountGT >= 5:\n",
     "            rescaleCountGT = 0\n",
     "            if recentMaxGT > 0:\n",
-    "                yEndGT = recentMaxGT*1.5\n",
+    "                yEndGT = recentMaxGT*1.2\n",
     "            else:\n",
     "                yEndGT = 1000\n",
+    "                \n",
+    "            if recentMinGT > 0:\n",
+    "                yStartGT = recentMinGT*0.8\n",
+    "            else:\n",
+    "                yStartGT = -100\n",
     "\n",
     "        if rescaleCountGR >= 5: \n",
     "            rescaleCountGR = 0\n",
     "            if recentMaxGR > 0:\n",
-    "                yEndGR = recentMaxGR*1.5\n",
+    "                yEndGR = recentMaxGR*1.2\n",
     "            else:\n",
     "                yEndGR = 1000\n",
+    "                \n",
+    "            if recentMinGR > 0:\n",
+    "                yStartGR = recentMinGR*0.8\n",
+    "            else:\n",
+    "                yStartGR = -100\n",
     "\n",
     "        if rescaleCountGTR >= 5:\n",
     "            rescaleCountGTR = 0\n",
     "            if recentMaxGTR > 0:\n",
-    "                yEndGTR = recentMaxGTR*1.5\n",
+    "                yEndGTR = recentMaxGTR*1.2\n",
     "            else:\n",
     "                yEndGTR = 1000\n",
+    "                \n",
+    "            if recentMinGTR > 0:\n",
+    "                yStartGTR = recentMinGTR*0.8\n",
+    "            else:\n",
+    "                yStartGTR = -100\n",
     "\n",
     "        if rescaleCountRatio >= 5:\n",
     "            rescaleCountRatio = 0\n",
     "            if recentMaxRatio > 0:\n",
-    "                yEndRatio = recentMaxRatio*1.5\n",
+    "                yEndRatio = recentMaxRatio*1.2\n",
     "            else:\n",
     "                yEndRatio = 0.2\n",
+    "                \n",
+    "            if recentMinRatio > 0:\n",
+    "                yStartRatio = recentMinRatio*0.8\n",
+    "            else:\n",
+    "                yStartRatio = -0.1\n",
     "\n",
     "        if rescaleCountG2 >= 5:\n",
     "            rescaleCountG2 = 0\n",
     "            if recentMaxG2 > 0:\n",
-    "                yEndG2 = recentMaxG2*1.5\n",
+    "                yEndG2 = recentMaxG2*1.2\n",
     "            else:\n",
     "                yEndG2 = 2\n",
+    "                \n",
+    "            if recentMinG2 > 0:\n",
+    "                yStartG2 = recentMinG2*0.8\n",
+    "            else:\n",
+    "                yStartG2 = -1\n",
     "\n",
     "\n",
     "        # update the y axis range\n",
-    "        singleCountsGPlot.y_range.update(start = -yEndG*0.1, end = yEndG)\n",
-    "        singleCountsTPlot.y_range.update(start = -yEndT*0.1, end = yEndT)\n",
-    "        singleCountsRPlot.y_range.update(start = -yEndR*0.1, end = yEndR)\n",
-    "        coincidenceCountsGTPlot.y_range.update(start = -yEndGT*0.1, end = yEndGT)\n",
-    "        coincidenceCountsGRPlot.y_range.update(start = -yEndGR*0.1, end = yEndGR)\n",
-    "        coincidenceCountsGTRPlot.y_range.update(start = -yEndGTR*0.1, end = yEndGTR)\n",
-    "        ratioPlot.y_range.update(start = -yEndRatio*0.1, end = yEndRatio)\n",
-    "        g2Plot.y_range.update(start = -yEndG2*0.1, end = yEndG2)\n",
+    "        singleCountsGPlot.y_range.update(start = yStartG, end = yEndG)\n",
+    "        singleCountsTPlot.y_range.update(start = yStartT, end = yEndT)\n",
+    "        singleCountsRPlot.y_range.update(start = yStartR, end = yEndR)\n",
+    "        coincidenceCountsGTPlot.y_range.update(start = yStartGT, end = yEndGT)\n",
+    "        coincidenceCountsGRPlot.y_range.update(start = yStartGR, end = yEndGR)\n",
+    "        coincidenceCountsGTRPlot.y_range.update(start = yStartGTR, end = yEndGTR)\n",
+    "        ratioPlot.y_range.update(start = yStartRatio, end = yEndRatio)\n",
+    "        g2Plot.y_range.update(start = yStartG2, end = yEndG2)\n",
     "\n",
     "\n",
     "\n",
@@ -1173,6 +1229,53 @@
     "        autoscalingToggle.label = \"Autoscaling ON\"\n",
     "    else:\n",
     "        autoscalingToggle.label = \"Autoscaling OFF\"\n",
+    "        \n",
+    "        # use global variable\n",
+    "        global yStartG\n",
+    "        global yStartT\n",
+    "        global yStartR\n",
+    "        global yStartGT\n",
+    "        global yStartGR\n",
+    "        global yStartGTR\n",
+    "\n",
+    "        global yEndG\n",
+    "        global yEndT\n",
+    "        global yEndR\n",
+    "        global yEndGT\n",
+    "        global yEndGR\n",
+    "        global yEndGTR\n",
+    "        \n",
+    "        # use global last five points lists\n",
+    "        global last5G\n",
+    "        global last5T\n",
+    "        global last5R\n",
+    "        global last5GT\n",
+    "        global last5GR\n",
+    "        global last5GTR\n",
+    "        \n",
+    "        # update the y range in terms of the average value of the most recet 5 points\n",
+    "        # plots with multiple lines are not changed\n",
+    "        yStartG = 0.8 * np.mean(last5G)\n",
+    "        yStartT = 0.8 * np.mean(last5T)\n",
+    "        yStartR = 0.8 * np.mean(last5R)\n",
+    "        yStartGT = 0.8 * np.mean(last5GT)\n",
+    "        yStartGR = 0.8 * np.mean(last5GR)\n",
+    "        yStartGTR = 0.8 * np.mean(last5GTR)\n",
+    "        \n",
+    "        yEndG = 1.2 * np.mean(last5G)\n",
+    "        yEndT = 1.2 * np.mean(last5T)\n",
+    "        yEndR = 1.2 * np.mean(last5R)\n",
+    "        yEndGT = 1.2 * np.mean(last5GT)\n",
+    "        yEndGR = 1.2 * np.mean(last5GR)\n",
+    "        yEndGTR = 1.2 * np.mean(last5GTR)\n",
+    "        \n",
+    "        # update the y axis range\n",
+    "        singleCountsGPlot.y_range.update(start = yStartG, end = yEndG)\n",
+    "        singleCountsTPlot.y_range.update(start = yStartT, end = yEndT)\n",
+    "        singleCountsRPlot.y_range.update(start = yStartR, end = yEndR)\n",
+    "        coincidenceCountsGTPlot.y_range.update(start = yStartGT, end = yEndGT)\n",
+    "        coincidenceCountsGRPlot.y_range.update(start = yStartGR, end = yEndGR)\n",
+    "        coincidenceCountsGTRPlot.y_range.update(start = yStartGTR, end = yEndGTR)\n",
     "\n",
     "    \n",
     "# When the START/STOP button is clicked, call the change_periodic_callback function\n",
@@ -1286,7 +1389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
